1.5 (???)
	* Allow user to change his or her email address in the console.

1.4 (2004/02/03)
	* Major cleanups - remove most uses of strcpy() and strcat()
	* A number of virus bugs have been fixed regarding getopt() and
	  other minor issues.
	* Add support for mailing users while they are playing.
	  [nh343-simple_mail.diff is needed]
	* Add a confirmation to the change password screen so people like me
	  don't change their passwords by accident all the time.
	* Remove many unused variables and make some functions void because
	  they don't return anything.
	* Add some function prototypes in dgamelaunch.c to quell warnings.
	* Make some vars unsigned to quell warnings.
	* 'capital letter. experimental' section made irrelevant by use of
	  tolower(3) around getch()
	* Change big conditional block to use a switch.
	* Replace a global with a static variable within the function.
	* Replace the giant size 64000 static buffers with dynamically
	  allocated structs
	* Checking for colons in user fields is made simpler using strstr(3)
	* Allow page up and page down on the watch games menu
	* Merge BSD compatibility patches
	* All licenses in source code mentioned in COPYING
	* Use fcntl for all file locking; flock(3) is not portable
	* Fix some troublesome uses of strncpy() with strlcpy
	* ditto for strncat->strlcat
	* Make sure only one session can be played at once at all and
	  SIGHUP the rest, ensuring the death of "Destroy old game? [yn]"
	* Replace two colossal conditionals with calls to isalnum(3).
	* Shift from static #defines to a configuration file system
	  powered by lex/yacc.
	* Include a little stub program to test dgamelaunch's functionality
	  without actually going through the hassle of setting up Nethack.
	* Always use -lcurses and #include <curses.h>
	* Port to FreeBSD 5 and Solaris (as of yet, untested)
	* Switched to own version of getnstr() that always accepts both
	  ^H and ^?
	* Now use 'ee' as the default rcfile editor. virus is still a compile